--- a/src/pages/posts/press-a-to-start-a-new-game.mdx
+++ b/src/pages/posts/press-a-to-start-a-new-game.mdx
@@ -8,7 +8,7 @@ url: "posts/press-a-to-start-a-new-game"
 ---
 
 <img
-  src="../../../public/assets/a-short-hike-banner.jpeg"
+  src="/assets/a-short-hike-banner.jpeg"
   alt="A Short Hike game banner"
   style="width: 100%; margin-bottom: 10px;"
 />
