Upgrade Astro and publish first post

--- a/src/content/blog/press-a-to-start-a-new-game.mdx
+++ b/src/content/blog/press-a-to-start-a-new-game.mdx
@@ -1,9 +1,7 @@
 ---
-layout: ../../layouts/PostLayout.astro
-pubDate: Mar 06, 2023
+pubDate: 2023-03-05
 title: 'Press "A" to start a new game'
-description: "Follow me on my journey to becoming a software developer"
-emoji: "👁"
+description: "Explore my journey in tech in the style of A Short Hike."
 url: "posts/press-a-to-start-a-new-game"
 ---
 
