Add open graph metadata to posts

--- a/src/content/blog/impossible-layout-with-resize-observer.mdx
+++ b/src/content/blog/impossible-layout-with-resize-observer.mdx
@@ -2,6 +2,7 @@
 pubDate: 2023-04-16
 title: "Impossible Layout with ResizeObserver"
 description: "Leveraging web APIs to improve user experience."
+image: "/assets/resize-observer/layout.png"
 ---
 
 A few months ago at work I was developing a new feature to improve our users' experience managing their purchases and sales, and I faced some technical challenges imposed by the web platform. In this post I'll share my journey on how I managed to solve this impossible layout using the ResizeObserver API.
