--- a/src/content/blog/press-a-to-start-a-new-game.mdx
+++ b/src/content/blog/press-a-to-start-a-new-game.mdx
@@ -2,6 +2,7 @@
 pubDate: 2023-03-05
 title: 'Press "A" to start a new game'
 description: "Explore my journey in tech in the style of A Short Hike."
+image: "/assets/a-short-hike-banner.jpeg"
 ---
 
 <img
